Added sidebar (collabsable)

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,5 +1,50 @@
-<div class="container">
-    <h1>MyTaskList</h1>
-    <hr>
-<tasks></tasks>
+<div id="page-wrapper" [ngClass]="{'open': toggle}">
+    <div id="sidebar-wrapper">
+        <ul class="sidebar">
+            <li class="sidebar-main">
+                <a (click)="toggleSidebar()">
+                    Dashboard
+                    <span class="menu-icon glyphicon glyphicon-transfer"></span>
+                </a>
+            </li>
+            <li class="sidebar-title"><span>NAVIGATION</span></li>
+            <li class="sidebar-list">
+                <a>Dashboard<span class="menu-icon fa fa-tachometer"></span></a>
+            </li>
+            <li class="sidebar-list">
+                <a>Table<span class="menu-icon fa fa-table"></span></a>
+            </li>
+        </ul>
+        <div class="sidebar-footer">
+            <div class="col-xs-4">
+                <a href="https://github.com/ziyasal/rdash-angular2" target="_blank">
+                    Github
+                </a>
+            </div>
+            <div class="col-xs-4">
+                <a href="https://github.com/ziyasal/rdash-angular2/blob/master/README.md" target="_blank">
+                    About
+                </a>
+            </div>
+            <div class="col-xs-4">
+                <a href="javascript:void(0)">
+                    Support
+                </a>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div id="content-wrapper">
+        <div class="page-content">
+
+            <!-- Header Bar -->
+
+            <h1>MyTaskList</h1>
+            <hr>
+            <tasks></tasks>
+        </div>
+    </div>
 </div>
+
