Added language en/de not final!

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -7,9 +7,9 @@
                     <span class="menu-icon glyphicon glyphicon-transfer"></span>
                 </a>
             </li>
-            <li class="sidebar-title"><span>NAVIGATION</span></li>
+            <li class="sidebar-title"><span>{{'navigation' | translate}}</span></li>
             <li class="sidebar-list">
-                <a routerLink="/" routerLinkActive="active">Home<span class="menu-icon fa fa-home"></span></a>
+                <a routerLink="/" routerLinkActive="active">{{'home' | translate}}<span class="menu-icon fa fa-home"></span></a>
             </li>
             <li class="sidebar-list">
                 <a routerLink="/tasks" routerLinkActive="active">Tasks<span class="menu-icon fa fa-tachometer"></span></a>
