--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -7,25 +7,47 @@
                     <span class="menu-icon glyphicon glyphicon-transfer"></span>
                 </a>
             </li>
-            <li class="sidebar-title"><span>{{'navigation' | translate}}</span></li>
+            <li class="sidebar-title"><span>{{'auftragsplanung' | translate}}</span></li>
             <li class="sidebar-list">
-                <a routerLink="/" routerLinkActive="active">{{'home' | translate}}<span class="menu-icon fa fa-home"></span></a>
+                <a routerLink="/" routerLinkActive="active">{{'XMLlesen' | translate}}<span class="menu-icon fa file-code-o"></span></a>
             </li>
             <li class="sidebar-list">
-                <a routerLink="/tasks" routerLinkActive="active">Tasks<span class="menu-icon fa fa-tachometer"></span></a>
+                <a routerLink="/tasks" routerLinkActive="active">{{'prognose' | translate}}<span class="menu-icon fa fa-line-chart"></span></a>
             </li>
             <li class="sidebar-list">
-                <a>Überischt<span class="menu-icon fa fa-table"></span></a>
-            </li>
-            <li class="sidebar-title"><span>Planung</span></li>
-            <li class="sidebar-list">
-                <a>Aufträge<span class="menu-icon fa fa-cubes"></span></a>
+                <a>{{'produktAnsicht' | translate}}<span class="menu-icon fa fa-eye"></span></a>
             </li>
             <li class="sidebar-list">
-                <a>Fertigung<span class="menu-icon fa fa-cogs"></span></a>
+                <a>{{'kaufteilDispo' | translate}}<span class="menu-icon fa fa-shopping-cart"></span></a>
             </li>
             <li class="sidebar-list">
-                <a>Kapazität<span class="menu-icon fa fa-battery-half"></span></a>
+                <a>{{'kapaPlanung' | translate}}<span class="menu-icon fa fa-battery-half"></span></a>
+            </li>
+            <li class="sidebar-list">
+                <a>{{'prodPrio' | translate}}<span class="menu-icon fa fa-sort "></span></a>
+            </li>
+            <li class="sidebar-title"><span>{{'uebersicht' | translate}}</span></li>
+            <li class="sidebar-list">
+                <a>{{'auftrBearb' | translate}}<span class="menu-icon fa fa-cogs"></span></a>
+            </li>
+            <li class="sidebar-list">
+                <a>{{'auftrWart' | translate}}<span class="menu-icon fa fa-stop-circle"></span></a>
+            </li>
+            <li class="sidebar-list">
+                <a>{{'lagerbestand' | translate}}<span class="menu-icon fa fa-bar-chart"></span></a>
+            </li>
+            <li class="sidebar-list">
+                <a>{{'historie' | translate}}<span class="menu-icon fa fa-history"></span></a>
+            </li>
+            <li class="sidebar-title"><span>{{'einstellungen' | translate}}</span></li>
+            <li class="sidebar-list">
+                <a>{{'arbeitsplaetze' | translate}}<span class="menu-icon fa fa-television"></span></a>
+            </li>
+            <li class="sidebar-list">
+                <a>{{'stuecklisten' | translate}}<span class="menu-icon fa fa-sitemap"></span></a>
+            </li>
+            <li class="sidebar-list">
+                <a>{{'teile' | translate}}<span class="menu-icon fa fa-cube"></span></a>
             </li>
         </ul>
         <div class="sidebar-footer">
