--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -9,7 +9,7 @@
             </li>
             <li class="sidebar-title"><span>{{'auftragsplanung' | translate}}</span></li>
             <li class="sidebar-list">
-                <a routerLink="/" routerLinkActive="active">{{'XMLlesen' | translate}}<span class="menu-icon fa file-code-o"></span></a>
+                <a>{{'XMLlesen' | translate}}<span class="menu-icon fa fa-file-code-o"></span></a>
             </li>
             <li class="sidebar-list">
                 <a routerLink="/tasks" routerLinkActive="active">{{'prognose' | translate}}<span class="menu-icon fa fa-line-chart"></span></a>
@@ -72,6 +72,29 @@
         <div class="page-content">
 
             <!-- Header Bar -->
+            <div class="row header">
+                <div class="col-xs-12">
+                    <div class="user pull-right">
+                        <div class="item dropdown">
+                            <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
+                                <i class="fa fa-language"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-right">
+                                <li class="dropdown-header">
+                                    {{'sprachen' | translate}}
+                                </li>
+                                <li class="divider"></li>
+                                <li (click)="setLang('de')">
+                                    <a>{{'deutsch' | translate}}</a>
+                                </li>
+                                <li (click)="setLang('en')">
+                                    <a>{{'englisch' | translate}}</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <router-outlet></router-outlet>
 
