--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -9,7 +9,7 @@
             </li>
             <li class="sidebar-title"><span>{{'auftragsplanung' | translate}}</span></li>
             <li class="sidebar-list">
-                <a>{{'XMLlesen' | translate}}<span class="menu-icon fa fa-file-code-o"></span></a>
+                <a routerLink="/xmlImport" routerLinkActive="active">{{'XMLlesen' | translate}}<span class="menu-icon fa fa-file-code-o"></span></a>
             </li>
             <li class="sidebar-list">
                 <a routerLink="/tasks" routerLinkActive="active">{{'prognose' | translate}}<span class="menu-icon fa fa-line-chart"></span></a>
