--- a/client/app/components/xmlImport/xmlImport.component.html
+++ b/client/app/components/xmlImport/xmlImport.component.html
@@ -1,1 +1,9 @@
-xmlImport
+<div class="well">
+    <h1>XML Import</h1>
+</div>
+<div class="col-lg-2">
+    <input type="file" (change)="changeListener($event)">
+    <p></p>
+    <textarea [(ngModel)]="xmltest"></textarea>
+    <button (click)="click()">dsssdffs</button>
+</div>
