Capacity initial + 1 get Request

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -23,7 +23,7 @@
                 <a>{{'sidebar_materialPlanning' | translate}}<span class="menu-icon fa fa-shopping-cart"></span></a>
             </li>
             <li class="sidebar-list">
-                <a>{{'sidebar_capacityPlanning' | translate}}<span class="menu-icon fa fa-battery-half"></span></a>
+                <a routerLink="/capacityPlanning" routerLinkActive="active">{{'sidebar_capacityPlanning' | translate}}<span class="menu-icon fa fa-battery-half"></span></a>
             </li>
             <li class="sidebar-list">
                 <a>{{'sidebar_prio' | translate}}<span class="menu-icon fa fa-sort "></span></a>
