--- a/client/app/components/capacityPlanning/capacityPlanning.component.html
+++ b/client/app/components/capacityPlanning/capacityPlanning.component.html
@@ -1,6 +1,27 @@
 
-    <div *ngFor="let workstation of workstations">
-        <div class="col-md-7">
-            {{workstation.Bezeichnung}}
-        </div>
-    </div>
+  <!--
+   <p-dataTable>
+       <p-column field="vin" header="Vin"></p-column>
+       <p-column field="year" header="Year"></p-column>
+       <p-column field="brand" header="Brand"></p-column>
+       <p-column field="color" header="Color"></p-column>
+   </p-dataTable>
+-->
+    <table class="table">
+        <thead>
+        <tr>
+            <th></th>
+            <th class="text-center" colspan="100%">{{'capacity_workstations' | translate}}</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Teil</td>
+            <td *ngFor="let workstation of workstations">{{workstation.nummer}}</td>
+        </tr>
+        <tr>
+
+        </tr>
+        </tbody>
+    </table>
+
