--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="node_modules/rdash-ui/dist/css/rdash.css">
+    <link rel="stylesheet" href="app/components/xmlImport/xmlImport.component.css">
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
     <script src="/node_modules/jquery/dist/jquery.js"></script>
@@ -21,6 +22,7 @@
     <script>
         System.import('app').catch(function(err){ console.error(err); });
     </script>
+
 
 </head>
 <!-- 3. Display the application -->
