--- a/client/app/components/xmlImport/xmlImport.component.html
+++ b/client/app/components/xmlImport/xmlImport.component.html
@@ -1,5 +1,14 @@
 <div class="well">
-    <h1>XML Import</h1>
+    <div class="container">
+        <div class="row">
+            <ul class="breadcrumb">
+                <li class="completed"><a href="javascript:void(0);">XML Import</a></li>
+                <li class="active"><a href="javascript:void(0);">xxxx</a></li>
+                <li><a href="javascript:void(0);">xxx</a></li>
+                <li><a href="javascript:void(0);">xxx</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 <div class="col-lg-2">
     <input type="file" (change)="changeListener($event)">
