--- a/client/app/components/capacityPlanning/capacityPlanning.component.html
+++ b/client/app/components/capacityPlanning/capacityPlanning.component.html
@@ -16,11 +16,18 @@
         </thead>
         <tbody>
         <tr>
-            <td>Teil</td>
+            <td width="5%">{{'capacity_parts' | translate}}</td>
+            <td width="5%">{{'capacity_amount' | translate}}</td>
             <td *ngFor="let workstation of workstations">{{workstation.nummer}}</td>
         </tr>
-        <tr>
-
+        <tr *ngFor="let al of artikelListe">
+            <td width="5%">{{al.part}}</td>
+            <td width="5%"></td>
+            <td *ngFor="let ws of workstations">
+                <span *ngFor="let zw of al.zuweisung">
+                    <span *ngIf="zw[0] === ws.nummer">{{zw[1]}}</span>
+                </span>
+            </td>
         </tr>
         </tbody>
     </table>
