--- a/client/app/components/xmlImport/xmlImport.component.html
+++ b/client/app/components/xmlImport/xmlImport.component.html
@@ -1,6 +1,7 @@
 <div class="well">
-    <div class="container">
+    <div class="">
         <div class="row">
+            <h2>XML Import & JSON convert</h2>
             <ul class="breadcrumb">
                 <li class="completed"><a href="javascript:void(0);">XML Import</a></li>
                 <li class="active"><a href="javascript:void(0);">xxxx</a></li>
@@ -12,6 +13,6 @@
 </div>
 <div class="col-lg-2">
     <input type="file" (change)="changeListener($event)">
-    <p></p>
-    <textarea [hidden]="!xml" [(ngModel)]="xml"></textarea>
 </div>
+<textarea class="fullScreenTextArea" [hidden]="!resultObj.results" [(ngModel)]="xml"></textarea>
+
