Prediction Komponente hinzugefügt

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -14,7 +14,10 @@
 
             </li>
             <li class="sidebar-list">
-                <a routerLink="/tasks" routerLinkActive="active">{{'sidebar_forecast' | translate}}<span class="menu-icon fa fa-line-chart"></span></a>
+                <a routerLink="/prediction" routerLinkActive="active">{{'sidebar_forecast' | translate}}<span class="menu-icon fa fa-line-chart"></span></a>
+            </li>
+            <li class="sidebar-list">
+                <a routerLink="/tasks" routerLinkActive="active">{{'sidebar_task' | translate}}<span class="menu-icon fa fa-line-chart"></span></a>
             </li>
             <li class="sidebar-list">
                 <a>{{'sidebar_productView' | translate}}<span class="menu-icon fa fa-eye"></span></a>
