--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -20,7 +20,7 @@
                 <a>{{'sidebar_productView' | translate}}<span class="menu-icon fa fa-eye"></span></a>
             </li>
             <li class="sidebar-list">
-                <a routerLink='/materialPlanning' routerLinkActive="active">{{'sidebar_materialPlanning' | translate}}<span class="menu-icon fa fa-shopping-cart"></span></a>
+                <a routerLink="/materialPlanning" routerLinkActive="active">{{'sidebar_materialPlanning' | translate}}<span class="menu-icon fa fa-shopping-cart"></span></a>
             </li>
             <li class="sidebar-list">
                 <a routerLink="/capacityPlanning" routerLinkActive="active">{{'sidebar_capacityPlanning' | translate}}<span class="menu-icon fa fa-battery-half"></span></a>
