--- a/client/app/components/prediction/prediction.component.html
+++ b/client/app/components/prediction/prediction.component.html
@@ -1,3 +1,127 @@
-<div class="container-fluid">
-    Prognose
-</div>
+<h1>Prognose</h1>
+<h2>Verbindliche Aufträge</h2>
+<table class="table">
+    <thead>
+    <tr>
+        <th>Periode</th>
+        <th>5</th>
+        <th>6</th>
+        <th>7</th>
+        <th>8</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">Produkt 1</th>
+        <td>100</td>
+        <td>200</td>
+        <td>450</td>
+        <td>600</td>
+    </tr>
+    <tr>
+        <th scope="row">Produkt 2</th>
+        <td>100</td>
+        <td>200</td>
+        <td>450</td>
+        <td>600</td>
+    </tr>
+    <tr>
+        <th scope="row">Produkt 3</th>
+        <td>100</td>
+        <td>200</td>
+        <td>450</td>
+        <td>600</td>
+    </tr>
+    <tr>
+        <th scope="row">Summe</th>
+        <td>100</td>
+        <td>200</td>
+        <td>450</td>
+        <td>600</td>
+    </tr>
+    </tbody>
+</table>
+<h2>Geplant</h2>
+<table class="table">
+    <thead>
+    <tr>
+        <th>Periode</th>
+        <th>5</th>
+        <th>6</th>
+        <th>7</th>
+        <th>8</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">Produkt 1</th>
+        <td>100</td>
+        <td>200</td>
+        <td>450</td>
+        <td>600</td>
+    </tr>
+    <tr>
+        <th scope="row">Produkt 2</th>
+        <td>100</td>
+        <td>200</td>
+        <td>450</td>
+        <td>600</td>
+    </tr>
+    <tr>
+        <th scope="row">Produkt 3</th>
+        <td>100</td>
+        <td>200</td>
+        <td>450</td>
+        <td>600</td>
+    </tr>
+    <tr>
+        <th scope="row">Summe</th>
+        <td>100</td>
+        <td>200</td>
+        <td>450</td>
+        <td>600</td>
+    </tr>
+    </tbody>
+</table>
+<h2>Rest Bestand</h2>
+<table class="table">
+    <thead>
+    <tr>
+        <th>Periode</th>
+        <th>5</th>
+        <th>6</th>
+        <th>7</th>
+        <th>8</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">Produkt 1</th>
+        <td>100</td>
+        <td>200</td>
+        <td>450</td>
+        <td>600</td>
+    </tr>
+    <tr>
+        <th scope="row">Produkt 2</th>
+        <td>100</td>
+        <td>200</td>
+        <td>450</td>
+        <td>600</td>
+    </tr>
+    <tr>
+        <th scope="row">Produkt 3</th>
+        <td>100</td>
+        <td>200</td>
+        <td>450</td>
+        <td>600</td>
+    </tr>
+    <tr>
+        <th scope="row">Summe</th>
+        <td>100</td>
+        <td>200</td>
+        <td>450</td>
+        <td>600</td>
+    </tr>
+    </tbody>
+</table>
