--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="node_modules/rdash-ui/dist/css/rdash.css">
     <link rel="stylesheet" href="app/components/xmlImport/xmlImport.component.css">
+    <link rel="stylesheet" href="app/components/capacityPlanning/capacityPlanning.component.css">
+
 
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
