td --> th in header

--- a/client/app/components/capacityPlanning/capacityPlanning.component.html
+++ b/client/app/components/capacityPlanning/capacityPlanning.component.html
@@ -10,7 +10,7 @@
     <table class="table-responsive table-bordered table-striped">
         <thead>
         <tr>
-            <td class="text-center" colspan="100%">{{'capacity_workstations' | translate}}</td>
+            <th class="text-center" colspan="100%">{{'capacity_workstations' | translate}}</th>
         </tr>
         <tr>
             <th width="5%" class="text-center">{{'capacity_parts' | translate}}</th>
