Settings Workstation Layout w/o button click events

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -46,7 +46,7 @@
             </li>
             <li class="sidebar-title"><span>{{'sidebar_settings' | translate}}</span></li>
             <li class="sidebar-list">
-                <a>{{'sidebar_workstations' | translate}}<span class="menu-icon fa fa-television"></span></a>
+                <a routerLink="/workstations" routerLinkActive="active">{{'sidebar_workstations' | translate}}<span class="menu-icon fa fa-television"></span></a>
             </li>
             <li class="sidebar-list">
                 <a>{{'sidebar_partsLists' | translate}}<span class="menu-icon fa fa-sitemap"></span></a>
@@ -75,7 +75,6 @@
     </div>
     <div id="content-wrapper">
         <div class="page-content">
-
             <!-- Header Bar -->
             <div class="row header">
                 <div class="col-xs-12">
