--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -1,46 +1,34 @@
 <table class="table">
-    <thead>
-    <tr>
-        <th>Nr.Kaufteil</th>
-        <th>Lieferfrist</th>
-        <th>Abweichung</th>
-        <th>Summe</th>
-        <th>Verwendung
-            <tr>
-                <td>p1</td>
-                <td>p2</td>
-                <td>p3</td>
-            </tr>
 
-        </th>
-        <th>Diskontmenge</th>
-        <th>Anfangsbestand Per n</th>
-        <th>Bruttobedarf nach Produktionsprogramm</th>
-        <th>Menge ohne Bestellung</th>
-        <th>Bestellmenge</th>
-        <th>Bestelltyp</th>
-        <th>Bestand nach gepl. Wareneingang</th>
+    <thead>
+
+    <tr>
+        <th colspan="3" scope="colgroup" class="text-center">Mars</th>
+        <th colspan="1" scope="colgroup">Venus</th>
+        <th colspan="1" scope="colgroup">Jupiter</th>
+    </tr>
+    <tr>
+        <th scope="col">P1</th>
+        <th scope="col">P2</th>
+        <th scope="col">P3</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+
     </tr>
     </thead>
 
     <tbody>
     <tr>
-        <td>21</td>
-        <td>1,8</td>
-        <td>0,4</td>
-        <td>50</td>
-        <td>wp1</td>
-        <td>wp2</td>
-        <td>wp3</td>
+        <td>10,000</td>
+        <td>5,000</td>
+        <td>12,000</td>
+        <td>9,000</td>
     </tr>
     <tr>
-        <td>22</td>
-        <td>1,7</td>
-        <td>0,4</td>
-        <td>150</td>
-        <td>wp1</td>
-        <td>wp2</td>
-        <td>wp3</td>
+        <td>reihe</td>
+        <td>reihe</td>
+        <td>reihe</td>
+        <td>reihe</td>
     </tr>
     </tbody>
 </table>
