--- a/client/app/components/capacityPlanning/capacityPlanning.component.html
+++ b/client/app/components/capacityPlanning/capacityPlanning.component.html
@@ -7,6 +7,20 @@
        <p-column field="color" header="Color"></p-column>
    </p-dataTable>
 -->
+      <div class="well">
+          <div class="">
+              <div class="row">
+                  <h2>Kapazitätsplanung</h2>
+                  <ul class="breadcrumb">
+                      <!--completed-->
+                      <li class="completed"><a href="javascript:void(0);">{{'xmlImport' | translate}}</a></li>
+                      <li class="completed"><a href="javascript:void(0);">{{'prediction_planning' | translate}}</a></li>
+                      <li class="completed"><a href="javascript:void(0);">{{'material_Planning' | translate}}</a></li>
+                      <li class="active"><a href="javascript:void(0);">{{'capacity_planning' | translate}}</a></li>
+                  </ul>
+              </div>
+          </div>
+      </div>
     <table class="table-responsive table-bordered table-striped">
         <thead>
         <tr>
