--- a/client/app/components/materialPlanning/materialPlanning.component.html
+++ b/client/app/components/materialPlanning/materialPlanning.component.html
@@ -1,3 +1,17 @@
+<div class="well">
+    <div class="">
+        <div class="row">
+            <h2>Prognose</h2>
+            <ul class="breadcrumb">
+                <!--completed-->
+                <li class="completed"><a routerLink="/xmlImport" routerLinkActive="active">{{'xmlImport' | translate}}</a></li>
+                <li class="completed"><a routerLink="/prediction" routerLinkActive="active">{{'prediction_planning' | translate}}</a></li>
+                <li class="active"><a routerLink="/materialPlanning" routerLinkActive="active">{{'material_Planning' | translate}}</a></li>
+                <li class=""><a routerLink="/capacityPlanning" routerLinkActive="active">{{'capacity_planning' | translate}}</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
 <table class="table">
     <thead>
     <tr>
