--- a/client/app/components/prediction/prediction.component.html
+++ b/client/app/components/prediction/prediction.component.html
@@ -1,5 +1,18 @@
-<h1>Prognose</h1>
-<h2>Verbindliche Aufträge</h2>
+<div class="well">
+    <div class="">
+        <div class="row">
+            <h2>Prognose</h2>
+            <ul class="breadcrumb">
+                <!--completed-->
+                <li class="completed"><a routerLink="/xmlImport" routerLinkActive="active">{{'xmlImport' | translate}}</a></li>
+                <li class="active"><a routerLink="/prediction" routerLinkActive="active">{{'prediction_planning' | translate}}</a></li>
+                <li class=""><a routerLink="/materialPlanning" routerLinkActive="active">{{'material_Planning' | translate}}</a></li>
+                <li class=""><a routerLink="/capacityPlanning" routerLinkActive="active">{{'capacity_planning' | translate}}</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<h3>Verbindliche Aufträge</h3>
 <table class="table">
     <thead>
     <tr>
