--- a/client/app/components/xmlImport/xmlImport.component.html
+++ b/client/app/components/xmlImport/xmlImport.component.html
@@ -1,12 +1,13 @@
 <div class="well">
     <div class="">
         <div class="row">
-            <h2>XML Import & JSON convert</h2>
+            <h2>XML Import und JSON Converter</h2>
             <ul class="breadcrumb">
-                <li class="completed"><a href="javascript:void(0);">{{'xmlImport' | translate}}</a></li>
-                <li class="active"><a href="javascript:void(0);">{{'prediction_planning' | translate}}</a></li>
-                <li><a href="javascript:void(0);">{{'material_Planning' | translate}}</a></li>
-                <li><a href="javascript:void(0);">{{'capacity_planning' | translate}}</a></li>
+                <!--completed-->
+                <li class="active"><a routerLink="/xmlImport" routerLinkActive="active">{{'xmlImport' | translate}}</a></li>
+                <li class=""><a routerLink="/prediction" routerLinkActive="active">{{'prediction_planning' | translate}}</a></li>
+                <li class=""><a routerLink="/materialPlanning" routerLinkActive="active">{{'material_Planning' | translate}}</a></li>
+                <li class=""><a routerLink="/capacityPlanning" routerLinkActive="active">{{'capacity_planning' | translate}}</a></li>
             </ul>
         </div>
     </div>
