--- a/client/app/components/settings/workstations/workstations.component.html
+++ b/client/app/components/settings/workstations/workstations.component.html
@@ -11,8 +11,12 @@
         <input type="text" [(ngModel)]="name" name="name" class="form-control" placeholder="Name" id="ws_name">
     </div>
     <div class="form-group" align="right">
-        <button type="button" class="btn btn-danger">{{'setWorkstations_reset' | translate}}</button>
-        <button type="button" class="btn btn-success">{{'setWorkstations_add' | translate}}</button>
+        <button type="button" class="btn btn-danger" (click)="_id = null; nummer = null; name = null;">
+            {{'setWorkstations_reset' | translate}}</button>
+        <button type="button" class="btn btn-success" (click)="updateWorkstation($event)">
+            <span *ngIf="!_id">{{'setWorkstations_add' | translate}}</span>
+            <span *ngIf="_id">{{'setWorkstations_update' | translate}}</span>
+        </button>
     </div>
 </div>
 
@@ -35,10 +39,12 @@
                 {{ws.name}}
             </td>
             <td width="12.5%%" style="padding-right: 5px" align="right">
-                <input type="button"  value="{{'setWorkstations_edit' | translate}}" class="btn btn-info">
+                <input type="button"  value="{{'setWorkstations_edit' | translate}}"
+                       class="btn btn-info" (click)="_id = ws._id; nummer = ws.nummer; name = ws.name">
             </td>
             <td width="12.5%%" style="padding-left: 5px" align="left">
-                <input type="button"  value="{{'setWorkstations_delete' | translate}}" class="btn btn-danger">
+                <input type="button"  value="{{'setWorkstations_delete' | translate}}"
+                       class="btn btn-danger" (click)="deleteWorkstation(ws._id)">
             </td>
         </tr>
         </tbody>
