--- a/client/app/components/settings/workstations/workstations.component.html
+++ b/client/app/components/settings/workstations/workstations.component.html
@@ -4,11 +4,11 @@
 <div class="well col-md-3" style="margin-left: 1%; margin-right: 1%;">
     <div class="form-group">
         <label for="ws_nummer">{{'setWorkstations_number' | translate}}</label>
-        <input type="text" [(ngModel)]="nummer" name="nummer" class="form-control" placeholder="Nummer" id="ws_nummer">
+        <input type="text" [(ngModel)]="nummer" name="nummer" class="form-control" placeholder="{{'setWorkstations_number' | translate}}" id="ws_nummer">
     </div>
     <div class="form-group">
         <label for="ws_name">{{'setWorkstations_name' | translate}}</label>
-        <input type="text" [(ngModel)]="name" name="name" class="form-control" placeholder="Name" id="ws_name">
+        <input type="text" [(ngModel)]="name" name="name" class="form-control" placeholder="{{'setWorkstations_name' | translate}}" id="ws_name">
     </div>
     <div class="form-group" align="right">
         <button type="button" class="btn btn-danger" (click)="_id = null; nummer = null; name = null;">
