--- a/client/app/components/settings/workstations/workstations.component.html
+++ b/client/app/components/settings/workstations/workstations.component.html
@@ -49,5 +49,29 @@
         </tr>
         </tbody>
     </table>
-
 </div>
+
+<modal #modalWsExists>
+    <modal-header [show-close]="true">
+        <h4 class="modal-title">{{'setWorkstations_exists' | translate}}</h4>
+    </modal-header>
+    <modal-body>
+        {{'setWorkstations_number' | translate}} {{this.nummer}} {{'setWorkstations_exists_body' | translate}}
+    </modal-body>
+    <modal-footer>
+        <button type="button" class="btn btn-default" data-dismiss="modal" (click)="modal.dismiss()">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="modal.close()">Ok</button>
+    </modal-footer>
+</modal>
+<modal #modalWsEmpty>
+    <modal-header [show-close]="true">
+        <h4 class="modal-title">{{'setWorkstations_empty' | translate}}</h4>
+    </modal-header>
+    <modal-body>
+        {{'setWorkstations_empty_body' | translate}}
+    </modal-body>
+    <modal-footer>
+        <button type="button" class="btn btn-default" data-dismiss="modal" (click)="modal.dismiss()">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="modal.close()">Ok</button>
+    </modal-footer>
+</modal>
