Added local storage Package (do npm install in Client), Added SessionStorage

--- a/client/app/components/tasks/tasks.component.html
+++ b/client/app/components/tasks/tasks.component.html
@@ -4,6 +4,8 @@
     </div>
 </form>
 
+<button (click)="test()">test</button>
+
 <div class="task-list">
     <div *ngFor="let task of tasks">
         <div class="col-md-1">
