--- a/client/app/components/capacityPlanning/capacityPlanning.component.html
+++ b/client/app/components/capacityPlanning/capacityPlanning.component.html
@@ -13,10 +13,10 @@
                   <h2>Kapazitätsplanung</h2>
                   <ul class="breadcrumb">
                       <!--completed-->
-                      <li class="completed"><a href="javascript:void(0);">{{'xmlImport' | translate}}</a></li>
-                      <li class="completed"><a href="javascript:void(0);">{{'prediction_planning' | translate}}</a></li>
-                      <li class="completed"><a href="javascript:void(0);">{{'material_Planning' | translate}}</a></li>
-                      <li class="active"><a href="javascript:void(0);">{{'capacity_planning' | translate}}</a></li>
+                      <li class="completed"><a routerLink="/xmlImport" routerLinkActive="active">{{'xmlImport' | translate}}</a></li>
+                      <li class="completed"><a routerLink="/prediction" routerLinkActive="active">{{'prediction_planning' | translate}}</a></li>
+                      <li class="completed"><a routerLink="/materialPlanning" routerLinkActive="active">{{'material_Planning' | translate}}</a></li>
+                      <li class="active"><a routerLink="/capacityPlanning" routerLinkActive="active">{{'capacity_planning' | translate}}</a></li>
                   </ul>
               </div>
           </div>
