Settings Parts initial

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -52,7 +52,7 @@
                 <a>{{'sidebar_partsLists' | translate}}<span class="menu-icon fa fa-sitemap"></span></a>
             </li>
             <li class="sidebar-list">
-                <a>{{'sidebar_parts' | translate}}<span class="menu-icon fa fa-cube"></span></a>
+                <a routerLink="/parts" routerLinkActive="active">{{'sidebar_parts' | translate}}<span class="menu-icon fa fa-cube"></span></a>
             </li>
         </ul>
         <div class="sidebar-footer">
