--- a/client/app/components/settings/workstations/workstations.component.html
+++ b/client/app/components/settings/workstations/workstations.component.html
@@ -4,7 +4,7 @@
 <div class="well col-md-3" style="margin-left: 1%; margin-right: 1%;">
     <div class="form-group">
         <label for="ws_nummer">{{'setWorkstations_number' | translate}}</label>
-        <input type="text" [(ngModel)]="nummer" name="nummer" class="form-control" placeholder="{{'setWorkstations_number' | translate}}" id="ws_nummer">
+        <input type="number" [(ngModel)]="nummer" name="nummer" class="form-control" placeholder="{{'setWorkstations_number' | translate}}" id="ws_nummer">
     </div>
     <div class="form-group">
         <label for="ws_name">{{'setWorkstations_name' | translate}}</label>
@@ -27,7 +27,7 @@
             <th width="10%">{{'setWorkstations_number' | translate}}</th>
             <th width="65%">{{'setWorkstations_name' | translate}}</th>
             <th width="12.5%"></th>
-            <th width="12.5%%"></th>
+            <th width="12.5%"></th>
         </tr>
         </thead>
         <tbody>
@@ -38,11 +38,11 @@
             <td width="65%">
                 {{ws.name}}
             </td>
-            <td width="12.5%%" style="padding-right: 5px" align="right">
+            <td width="12.5%" style="padding-right: 5px" align="right">
                 <input type="button"  value="{{'setWorkstations_edit' | translate}}"
                        class="btn btn-info" (click)="_id = ws._id; nummer = ws.nummer; name = ws.name">
             </td>
-            <td width="12.5%%" style="padding-left: 5px" align="left">
+            <td width="12.5%" style="padding-left: 5px" align="left">
                 <input type="button"  value="{{'setWorkstations_delete' | translate}}"
                        class="btn btn-danger" (click)="deleteWorkstation(ws._id)">
             </td>
